test/deca/syntax/invalid/multexpr_mult_incomplet_1.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque expr après *)

{
    2 *;
}